--- a/index.html
+++ b/index.html
@@ -32,40 +32,35 @@
   <!--Header -->
   <header>
     <main>
-      <div class="container-12">
-        <nav class="row justify-content-end">
-          <a href="#home" class="col"><img src="images/the_rock.png" class="rounded" alt=""></a>
-          <div class=>
-            <ul class="row border px-3 mt-3 list-unstyled list-group list-group-horizontal">
-              <a href="">
-                <li class="col">Hey</li>
+      <div class="container-fluid">
+        <nav class="row navbar navbar-light" style="background-color: #0E0805; opacity: 75%;">
+          <a href="#home" class="navbar-brand text-white" data-toggle="collapse" data-target="#Nav"
+            aria-label="Toggle navigation"><img src="images/the_rock.png" class="d-inline-block align-bottom"
+              alt="">Rock and Roll</a>
+          <div class="collapse navbar-collapse" id="Nav">
+            <div class="navbar-nav">
+              <a href="#" class="nav-link text-right text-white">About us </a>
+              <a href="#home" class="nav-link text-right text-white">Rock Shop </a>
+              <a href="#home" class="nav-link text-right text-white">Rock Knowledge </a>
+              <a href="#home" class="nav-link text-right text-white">The Esteemed Rock
               </a>
-              <a href="">
-                <li class="col">Hey</li>
-              </a>
-              <a href="">
-                <li class="col">Hey</li>
-              </a>
-              <a href="">
-                <li class="col">Hey</li>
-              </a>
-              <a href="">
-                <li class="col">Hey</li>
-              </a>
-            </ul>
-          </div>
+              <a href="#home" class="nav-link text-right text-white">The Rock Block</a>
+              </ul>
+            </div>
 
         </nav>
 
       </div>
       <!-- Banner -->
-      <div>
-        <h2>Heloo</h1>
-          <h3>Im a bonkers boi
-        </h2>
-        <p>Something fun and funny and long. Like really long. enough sentence to make you think twice about reading
-          youll need to TL;Drnthat mess. Im foreal its gonna be a super lonn thing here</p>
-      </div>
+      <div class="container-fluid  text-center mt-5">
+        <h1 class="display-3 py-5 text-white">Rock and Roll inc</h1>
+        <h3 class="text-white">Rocks that’ll knock off your socks!
+          </h2>
+          <p class="text-right  pb-3 text-white">(do not put our rocks in socks)</p>
+          <p class="text-center pb-5 text-white">Welcome to Rock and Roll your earthy supplier of stubborn blunt beauty.
+            We know
+            why
+            your here, ROCKS. We have a show of supply and a few other rock surprises for you as well. Contact US!</p>
   </header>
   <!--Single Item Carousel Section-->
   <section>
