Mm what a beauty

--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
 
 <body>
   <!--Header -->
-  <header>
-    <main>
-      <div class="container-fluid">
+  <main>
+    <header>
+      <div class="container-12">
         <nav class="row navbar navbar-light" style="background-color: #0E0805; opacity: 75%;">
-          <a href="#home" class="navbar-brand text-white" data-toggle="collapse" data-target="#Nav"
-            aria-label="Toggle navigation"><img src="images/the_rock.png" class="d-inline-block align-bottom"
-              alt="">Rock and Roll</a>
+          <a href="#home" class="navbar-brand" style="color: #81482C;" data-toggle="collapse" data-target="#Nav"
+            aria-label="Toggle navigation"> <span style="color: #E9D4CA ;">Rock</span> and
+            <span style="color: #E9D4CA ;"> Roll</span> Co.</a>
+          <img src="images/more.png" class=" navbar-brand text-white " data-toggle="collapse" data-target="#Nav"
+            alt="Menu">
           <div class="collapse navbar-collapse" id="Nav">
-            <div class="navbar-nav">
-              <a href="#" class="nav-link text-right text-white">About us </a>
-              <a href="#home" class="nav-link text-right text-white">Rock Shop </a>
-              <a href="#home" class="nav-link text-right text-white">Rock Knowledge </a>
-              <a href="#home" class="nav-link text-right text-white">The Esteemed Rock
+            <div class="navbar-na">
+              <a href="#" class="nav-link text-right" style="color: #E9D4CA">About us </a>
+              <a href="#home" class="nav-link text-right" style="color: #81482C;">Rock Shop </a>
+              <a href="#home" class="nav-link text-right " style="color:#E9D4CA;">Rock Knowledge </a>
+              <a href="#home" class="nav-link text-right" style="color: #81482C;">The Esteemed Rock
               </a>
-              <a href="#home" class="nav-link text-right text-white">The Rock Block</a>
+              <a href="#home" class="nav-link text-right" style="color:#E9D4CA;">The Rock Block</a>
               </ul>
             </div>
 
@@ -55,39 +57,127 @@
       <div class="container-fluid  text-center mt-5">
         <h1 class="display-3 py-5 text-white">Rock and Roll inc</h1>
         <h3 class="text-white">Rocks that’ll knock off your socks!
-          </h2>
-          <p class="text-right  pb-3 text-white">(do not put our rocks in socks)</p>
-          <p class="text-center pb-5 text-white">Welcome to Rock and Roll your earthy supplier of stubborn blunt beauty.
-            We know
-            why
-            your here, ROCKS. We have a show of supply and a few other rock surprises for you as well. Contact US!</p>
-  </header>
-  <!--Single Item Carousel Section-->
-  <section>
+        </h3>
+        <p class="text-right  pb-3 text-white">(do not put our rocks in socks)</p>
+        <p class="text-center pb-5 text-white">Welcome to Rock and Roll your earthy supplier of stubborn blunt beauty.
+          We know
+          why
+          your here, ROCKS. We have a show of supply and a few other rock surprises for you as well. Contact US!</p>
+      </div>
+    </header>
 
-  </section>
-  <!--Multiple Item Carousel-->
-  <section>
+    <!--Single Item Carousel Section-->
+    <section>
+      <div class="" style="background-color: #E9D4CA;;">
+        <h1 class="text-center">Customers</h1>
+        <div class="Carousel">
+          <div id="Slides" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner d-flex align-items-center"
+              style="max-height: 500px;  min-height: 250px; background-color: #81482C;">
+              <div class="carousel-item active ">
+                <div class="d-flex justify-content-center align-items-center">
+                  <!--Carousel 1-->
+                  <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
+                    <div class="row no-gutters">
+                      <div class="col-md-4 text-center my-auto pt-5">
+                        <img src="images/happy_guy_1.png" class="rounded-circle">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Tyler Blevins</h5>
+                          <p class="">
+                          <blockquote>" I love the smooth quality that the rock was carved in. For something so hard, It
+                            feels pretty soft! " </blockquote>
+                          </p>
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center align-items-center">
+                  <!--Carousel 2-->
+                  <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
+                    <div class="row no-gutters">
+                      <div class="col-md-4 text-center my-auto pt-5">
+                        <img src="images/Happy_Guy_2.png" class="rounded-circle" alt="">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Card Title</h5>
+                          <p class=""> This is a wider card with sipporting text below as a natural lead-in to
+                            additional
+                            content. This cont is a wide card</p>
+                          <small class="text-secondary card-text">Last
+                            updated 3 mins ago</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item ">
+                <div class="d-flex justify-content-center align-items-center">
+                  <!--Carousel 1-->
+                  <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
+                    <div class="row no-gutters">
+                      <div class="col-md-4 text-center my-auto pt-5">
+                        <img src="images/Serious_women_1.png" class="rounded-circle" alt="">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Card Title</h5>
+                          <p class=""> This is a wider card with sipporting text below as a natural lead-in to
+                            additional
+                            content. This cont is a wide card</p>
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-target="#Slides" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-target="#Slides" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </button>
 
-  </section>
-  <!--Drop Down Menu(Rock Knowledge)-->
-  <section>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Multiple Item Carousel-->
+    <section>
+      <div style="height: 300px;">
 
-  </section>
-  <!--Sections with Aside(Our Most Esteemed Rock)-->
-  <section>
+      </div>
 
-  </section>
-  <!--Free Section(Possibly The Rock Stop)-->
-  <section>
+    </section>
+    <!--Drop Down Menu(Rock Knowledge)-->
+    <section>
 
-  </section>
-  <!--Footer-->
-  <section>
-    <div>
+    </section>
+    <!--Sections with Aside(Our Most Esteemed Rock)-->
+    <section>
 
-    </div>
-  </section>
+    </section>
+    <!--Free Section(Possibly The Rock Stop)-->
+    <section>
+
+    </section>
+    <!--Footer-->
+    <section>
+      <div>
+
+      </div>
+    </section>
   </main>
 
 
