--- a/index.html
+++ b/index.html
@@ -55,18 +55,23 @@
 
         </div>
         <!-- Banner -->
-        <div class="container-fluid  text-center mt-5">
+        <div class="container-fluid  text-center mt-5 pb-5" style="min-height: 600px;">
           <h1 class="display-3 py-5 text-white">Rock and Roll inc</h1>
           <h3 class="text-white">Rocks that’ll knock off your socks!
           </h3>
-          <p class="text-right  pb-3 text-white">(do not put our rocks in socks)</p>
-          <p class="text-center pb-5 mb-0 text-white">Welcome to Rock and Roll your earthy supplier of stubborn blunt
-            beauty.
-            We know
-            why
-            your here, ROCKS. We have a show of supply and a few other rock surprises for you as well. Contact US!</p>
+          <p class="text-right  py-3 text-white">(do not put our rocks in socks)</p>
+          <div class="d-flex justify-content-center" style="padding-top: 100px;">
+            <p class="text-center pb-5 mb-0 text-white text-wrap" style="width: 400px;">Welcome to Rock and Roll your
+              earthy
+              supplier of stubborn blunt
+              beauty.
+              We know
+              why
+              your here, ROCKS. We have a show of supply and a few other rock surprises for you as well. Contact US!</p>
+          </div>
         </div>
       </div>
+  </div>
   </div>
 
 
@@ -77,6 +82,11 @@
       <h1 class="text-center">Customers</h1>
       <div class="Carousel">
         <div id="Slides" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#Slides" data-slide-to="0" class="active"></li>
+            <li data-target="#Slides" data-slide-to="1"></li>
+            <li data-target="#Slides" data-slide-to="2"></li>
+          </ol>
           <div class="carousel-inner d-flex align-items-center"
             style="max-height: 500px;  min-height: 250px; background-color: #81482C;">
             <div class="carousel-item active ">
@@ -113,9 +123,10 @@
                     <div class="col-md-8">
                       <div class="card-body">
                         <h5 class="card-title">Card Title</h5>
-                        <p class=""> This is a wider card with sipporting text below as a natural lead-in to
-                          additional
-                          content. This cont is a wide card</p>
+                        <p class="">
+                        <blockquote>" I love the smooth quality that the rock was carved in. For something so
+                          hard, It
+                          feels pretty soft! " </blockquote>
                         <small class="text-secondary card-text">Last
                           updated 3 mins ago</small>
                       </div>
@@ -135,9 +146,11 @@
                     <div class="col-md-8">
                       <div class="card-body">
                         <h5 class="card-title">Card Title</h5>
-                        <p class=""> This is a wider card with sipporting text below as a natural lead-in to
-                          additional
-                          content. This cont is a wide card</p>
+                        <p class="">
+                        <blockquote>" I love the smooth quality that the rock was carved in. For something so
+                          hard, It
+                          feels pretty soft! " </blockquote>
+                        </p>
                         <small class="text-muted">Last updated 3 mins ago</small>
                       </div>
                     </div>
@@ -161,12 +174,124 @@
   </section>
   <!--Multiple Item Carousel-->
   <section>
-    <div style="height: 500px; background-color: #E9D4CA;">
+    <div style="height: 800px; background-color: #E9D4CA;">
       <h1 class="text-center">Rock Shop</h1>
-      <div>
+      <div id="Mult-Slides" class="carousel slides" data-ride="carousel">
+        <ol id class="carousel-indicators">
+          <li data-target="#Mult-Slides" data-slide-to="0" class="active"></li>
+          <li data-target="#Mult-Slides" data-slide-to="1"></li>
+          <li data-target="#Mult-Slides" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner d-flex align-items-center"
+          style="max-height: 500px;  min-height: 250px; background-color: #81482C;">
+          <div class="carousel-item active">
+            <div class="card-deck d-flex justify-content-center ">
+              <!--New Carousel-->
+              <div class="col-md-2">
+                <div class="card" style="max-width: 300px;">
+                  <img src="images/happy_guy_1.png" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Some Card text for now</p>
+                    <small class="card-text text-muted">Heyo</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2">
+                <div class="card" style="max-width: 300px;">
+                  <img src="images/happy_guy_1.png" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Some Card text for now</p>
+                    <small class="card-text text-muted">Heyo</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2">
+                <div class="card" style="max-width: 300px;">
+                  <img src="images/happy_guy_1.png" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Some Card text for now</p>
+                    <small class="card-text text-muted">Heyo</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2">
+                <div class="card" style="max-width: 300px;">
+                  <img src="images/happy_guy_1.png" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Some Card text for now</p>
+                    <small class="card-text text-muted">Heyo</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <!-- Were gonna get funky here... Im gonna put four cards in one slide and in that slides the rocks selections can slide
+                 to different versions of the same rock -->
+            <div class="card-deck d-flex justify-content-center">
+              <!--New Carousel-->
+              <div class="col-md-2">
+                <div class="card" style="max-width: 300px;">
+                  <img src="images/Happy_Guy_2.png" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Some Card text for now</p>
+                    <small class="card-text text-muted">Heyo</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2">
+                <div class="card" style="max-width: 300px;">
+                  <img src="images/Happy_Guy_2.png" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Some Card text for now</p>
+                    <small class="card-text text-muted">Heyo</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2">
+                <div class="card" style="max-width: 300px;">
+                  <img src="images/Happy_Guy_2.png" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Some Card text for now</p>
+                    <small class="card-text text-muted">Heyo</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2">
+                <div class="card" style="max-width: 300px;">
+                  <img src="images/Happy_Guy_2.png" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Some Card text for now</p>
+                    <small class="card-text text-muted">Heyo</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
+        </div>
+        <a class="carousel-control-prev" type="button" data-target="#Mult-Slides" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" type="button" data-target="#Mult-Slides" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
+
+
     </div>
+    </div>
+
 
   </section>
   <!--Drop Down Menu(Rock Knowledge)-->
