--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
@@ -24,8 +26,8 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
   <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
@@ -79,223 +81,121 @@
   <!--Single Item Carousel Section-->
   <section>
     <div class="" style="background-color: #E9D4CA;;">
-      <h1 class="text-center">Customers</h1>
-      <div class="Carousel">
-        <div id="Slides" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#Slides" data-slide-to="0" class="active"></li>
-            <li data-target="#Slides" data-slide-to="1"></li>
-            <li data-target="#Slides" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner d-flex align-items-center"
-            style="max-height: 500px;  min-height: 250px; background-color: #81482C;">
-            <div class="carousel-item active ">
-              <div class="d-flex justify-content-center align-items-center">
-                <!--Carousel 1-->
-                <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
-                  <div class="row no-gutters">
-                    <div class="col-md-4 text-center my-auto pt-5">
-                      <img src="images/happy_guy_1.png" class="rounded-circle">
+      <div>
+        <h1 class="text-center">Customers</h1>
+        <div class="Carousel">
+          <div id="Slides" class="carousel slide" data-ride="carousel">
+            <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+              integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+            <ol class="carousel-indicators">
+              <li data-target="#Slides" data-slide-to="0" class="active"></li>
+              <li data-target="#Slides" data-slide-to="1"></li>
+              <li data-target="#Slides" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner d-flex align-items-center" data-interval="5000"
+              style="max-height: 500px;  min-height: 250px; background-color: #81482C;">
+              <div class="carousel-item active ">
+                <div class="d-flex justify-content-center align-items-center">
+                  <!--Carousel 1-->
+                  <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
+                    <div class="row no-gutters">
+                      <div class="col-md-4 text-center my-auto pt-5">
+                        <img src="images/happy_guy_1.png" class="rounded-circle">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Tyler Blevins</h5>
+                          <p class="">
+                          <blockquote>" I love the smooth quality that the rock was carved in. For something so
+                            hard, It
+                            feels pretty soft! " </blockquote>
+                          </p>
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                      </div>
                     </div>
-                    <div class="col-md-8">
-                      <div class="card-body">
-                        <h5 class="card-title">Tyler Blevins</h5>
-                        <p class="">
-                        <blockquote>" I love the smooth quality that the rock was carved in. For something so
-                          hard, It
-                          feels pretty soft! " </blockquote>
-                        </p>
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center align-items-center">
+                  <!--Carousel 2-->
+                  <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
+                    <div class="row no-gutters">
+                      <div class="col-md-4 text-center my-auto pt-5">
+                        <img src="images/Happy_Guy_2.png" class="rounded-circle" alt="">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Card Title</h5>
+                          <p class="">
+                          <blockquote>" I love the smooth quality that the rock was carved in. For something so
+                            hard, It
+                            feels pretty soft! " </blockquote>
+                          <small class="text-secondary card-text">Last
+                            updated 3 mins ago</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item ">
+                <div class="d-flex justify-content-center align-items-center">
+                  <!--Carousel 1-->
+                  <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
+                    <div class="row no-gutters">
+                      <div class="col-md-4 text-center my-auto pt-5">
+                        <img src="images/Serious_women_1.png" class="rounded-circle" alt="">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Card Title</h5>
+                          <p class="">
+                          <blockquote>" I love the smooth quality that the rock was carved in. For something so
+                            hard, It
+                            feels pretty soft! " </blockquote>
+                          </p>
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <div class="d-flex justify-content-center align-items-center">
-                <!--Carousel 2-->
-                <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
-                  <div class="row no-gutters">
-                    <div class="col-md-4 text-center my-auto pt-5">
-                      <img src="images/Happy_Guy_2.png" class="rounded-circle" alt="">
-                    </div>
-                    <div class="col-md-8">
-                      <div class="card-body">
-                        <h5 class="card-title">Card Title</h5>
-                        <p class="">
-                        <blockquote>" I love the smooth quality that the rock was carved in. For something so
-                          hard, It
-                          feels pretty soft! " </blockquote>
-                        <small class="text-secondary card-text">Last
-                          updated 3 mins ago</small>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item ">
-              <div class="d-flex justify-content-center align-items-center">
-                <!--Carousel 1-->
-                <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
-                  <div class="row no-gutters">
-                    <div class="col-md-4 text-center my-auto pt-5">
-                      <img src="images/Serious_women_1.png" class="rounded-circle" alt="">
-                    </div>
-                    <div class="col-md-8">
-                      <div class="card-body">
-                        <h5 class="card-title">Card Title</h5>
-                        <p class="">
-                        <blockquote>" I love the smooth quality that the rock was carved in. For something so
-                          hard, It
-                          feels pretty soft! " </blockquote>
-                        </p>
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <a class="carousel-control-prev" type="button" data-target="#Slides" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" type="button" data-target="#Slides" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+            <a class="carousel-control-prev" type="button" data-target="#Slides" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" type="button" data-target="#Slides" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
 
+          </div>
         </div>
       </div>
-    </div>
   </section>
   <!--Multiple Item Carousel-->
   <section>
-    <div style="height: 800px; background-color: #E9D4CA;">
-      <h1 class="text-center">Rock Shop</h1>
-      <div id="Mult-Slides" class="carousel slides" data-ride="carousel">
-        <ol id class="carousel-indicators">
-          <li data-target="#Mult-Slides" data-slide-to="0" class="active"></li>
-          <li data-target="#Mult-Slides" data-slide-to="1"></li>
-          <li data-target="#Mult-Slides" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner d-flex align-items-center"
-          style="max-height: 500px;  min-height: 250px; background-color: #81482C;">
-          <div class="carousel-item active">
-            <div class="card-deck d-flex justify-content-center ">
-              <!--New Carousel-->
-              <div class="col-md-2">
-                <div class="card" style="max-width: 300px;">
-                  <img src="images/happy_guy_1.png" alt="">
-                  <div class="card-body">
-                    <h5 class="card-title">Card Title</h5>
-                    <p class="card-text">Some Card text for now</p>
-                    <small class="card-text text-muted">Heyo</small>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-2">
-                <div class="card" style="max-width: 300px;">
-                  <img src="images/happy_guy_1.png" alt="">
-                  <div class="card-body">
-                    <h5 class="card-title">Card Title</h5>
-                    <p class="card-text">Some Card text for now</p>
-                    <small class="card-text text-muted">Heyo</small>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-2">
-                <div class="card" style="max-width: 300px;">
-                  <img src="images/happy_guy_1.png" alt="">
-                  <div class="card-body">
-                    <h5 class="card-title">Card Title</h5>
-                    <p class="card-text">Some Card text for now</p>
-                    <small class="card-text text-muted">Heyo</small>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-2">
-                <div class="card" style="max-width: 300px;">
-                  <img src="images/happy_guy_1.png" alt="">
-                  <div class="card-body">
-                    <h5 class="card-title">Card Title</h5>
-                    <p class="card-text">Some Card text for now</p>
-                    <small class="card-text text-muted">Heyo</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <!-- Were gonna get funky here... Im gonna put four cards in one slide and in that slides the rocks selections can slide
-                 to different versions of the same rock -->
-            <div class="card-deck d-flex justify-content-center">
-              <!--New Carousel-->
-              <div class="col-md-2">
-                <div class="card" style="max-width: 300px;">
-                  <img src="images/Happy_Guy_2.png" alt="">
-                  <div class="card-body">
-                    <h5 class="card-title">Card Title</h5>
-                    <p class="card-text">Some Card text for now</p>
-                    <small class="card-text text-muted">Heyo</small>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-2">
-                <div class="card" style="max-width: 300px;">
-                  <img src="images/Happy_Guy_2.png" alt="">
-                  <div class="card-body">
-                    <h5 class="card-title">Card Title</h5>
-                    <p class="card-text">Some Card text for now</p>
-                    <small class="card-text text-muted">Heyo</small>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-2">
-                <div class="card" style="max-width: 300px;">
-                  <img src="images/Happy_Guy_2.png" alt="">
-                  <div class="card-body">
-                    <h5 class="card-title">Card Title</h5>
-                    <p class="card-text">Some Card text for now</p>
-                    <small class="card-text text-muted">Heyo</small>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-2">
-                <div class="card" style="max-width: 300px;">
-                  <img src="images/Happy_Guy_2.png" alt="">
-                  <div class="card-body">
-                    <h5 class="card-title">Card Title</h5>
-                    <p class="card-text">Some Card text for now</p>
-                    <small class="card-text text-muted">Heyo</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-        <a class="carousel-control-prev" type="button" data-target="#Mult-Slides" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" type="button" data-target="#Mult-Slides" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-
-
-    </div>
-    </div>
-
-
   </section>
   <!--Drop Down Menu(Rock Knowledge)-->
   <section>
+
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="drop-it" data-toggle="dropdown"
+        aria-expanded="false">
+        Dropdown link
+      </button>
+
+      <ul class="dropdown-menu" aria-labelledby="drop-it">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Action</a></li>
+      </ul>
+    </div>
+    </div>
 
   </section>
   <!--Sections with Aside(Our Most Esteemed Rock)-->
@@ -313,6 +213,8 @@
     </div>
   </section>
   </main>
+
+
 
 
 
