--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
+  <script src="/path/of/bootstrap/bootstrap.bundle.min.js"></script>
+
+
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -182,21 +185,21 @@
   </section>
   <!--Drop Down Menu(Rock Knowledge)-->
   <section>
+    <div style="height:300px" class="text-center">
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="drop-it" data-toggle="dropdown"
+          aria-expanded="false">
+          Dropdown link
+        </button>
 
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="drop-it" data-toggle="dropdown"
-        aria-expanded="false">
-        Dropdown link
-      </button>
-
-      <ul class="dropdown-menu" aria-labelledby="drop-it">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Action</a></li>
-      </ul>
+        <ul class="dropdown-menu" aria-labelledby="drop-it">
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Action</a></li>
+        </ul>
+      </div>
     </div>
     </div>
-
   </section>
   <!--Sections with Aside(Our Most Esteemed Rock)-->
   <section>
