THe order you place your cdns REALLY Matter in your html

--- a/index.html
+++ b/index.html
@@ -68,124 +68,244 @@
 
   <!--Single Item Carousel Section-->
   <section>
-    <div class="" style="background-color: #E9D4CA;;">
-      <div>
+    <div>
+      <div class="rounded" style="background-color: #E9D4CA;">
         <h1 class="text-center">Customers</h1>
         <div class="Carousel">
-          <div id="Slides" class="carousel slide" data-ride="carousel">
-            <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-              integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-            <ol class="carousel-indicators">
-              <li data-target="#Slides" data-slide-to="0" class="active"></li>
-              <li data-target="#Slides" data-slide-to="1"></li>
-              <li data-target="#Slides" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner d-flex align-items-center" data-interval="5000"
-              style="max-height: 500px;  min-height: 250px; background-color: #81482C;">
-              <div class="carousel-item active ">
-                <div class="d-flex justify-content-center align-items-center">
-                  <!--Carousel 1-->
-                  <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
-                    <div class="row no-gutters">
-                      <div class="col-md-4 text-center my-auto pt-5">
-                        <img src="images/happy_guy_1.png" class="rounded-circle">
-                      </div>
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          <h5 class="card-title">Tyler Blevins</h5>
-                          <p class="">
-                          <blockquote>" I love the smooth quality that the rock was carved in. For something so
-                            hard, It
-                            feels pretty soft! " </blockquote>
-                          </p>
-                          <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                      </div>
+        </div>
+        <div id="Slides" class="carousel slide" data-ride="carousel">
+          <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+          <ol class="carousel-indicators">
+            <li data-target="#Slides" data-slide-to="0" class="active"></li>
+            <li data-target="#Slides" data-slide-to="1"></li>
+            <li data-target="#Slides" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner d-flex align-items-center" data-interval="5000"
+            style="max-height: 500px;  min-height: 250px; background-color: #81482C;">
+            <div class="carousel-item active ">
+              <div class="d-flex justify-content-center align-items-center">
+                <!--Carousel 1-->
+                <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
+                  <div class="row no-gutters">
+                    <div class="col-md-4 text-center my-auto pt-5">
+                      <img src="images/happy_guy_1.png" class="rounded-circle">
                     </div>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="d-flex justify-content-center align-items-center">
-                  <!--Carousel 2-->
-                  <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
-                    <div class="row no-gutters">
-                      <div class="col-md-4 text-center my-auto pt-5">
-                        <img src="images/Happy_Guy_2.png" class="rounded-circle" alt="">
-                      </div>
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          <h5 class="card-title">Card Title</h5>
-                          <p class="">
-                          <blockquote>" I love the smooth quality that the rock was carved in. For something so
-                            hard, It
-                            feels pretty soft! " </blockquote>
-                          <small class="text-secondary card-text">Last
-                            updated 3 mins ago</small>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item ">
-                <div class="d-flex justify-content-center align-items-center">
-                  <!--Carousel 1-->
-                  <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
-                    <div class="row no-gutters">
-                      <div class="col-md-4 text-center my-auto pt-5">
-                        <img src="images/Serious_women_1.png" class="rounded-circle" alt="">
-                      </div>
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          <h5 class="card-title">Card Title</h5>
-                          <p class="">
-                          <blockquote>" I love the smooth quality that the rock was carved in. For something so
-                            hard, It
-                            feels pretty soft! " </blockquote>
-                          </p>
-                          <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Tyler Blevins</h5>
+                        <p class="">
+                        <blockquote>" I love the smooth quality that the rock was carved in. For something so
+                          hard, It
+                          feels pretty soft! " </blockquote>
+                        </p>
+                        <small class="text-muted">Last updated 3 mins ago</small>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <a class="carousel-control-prev" type="button" data-target="#Slides" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" type="button" data-target="#Slides" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-
+            <div class="carousel-item">
+              <div class="d-flex justify-content-center align-items-center">
+                <!--Carousel 2-->
+                <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
+                  <div class="row no-gutters">
+                    <div class="col-md-4 text-center my-auto pt-5">
+                      <img src="images/Happy_Guy_2.png" class="rounded-circle" alt="">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Card Title</h5>
+                        <p class="">
+                        <blockquote>" I love the smooth quality that the rock was carved in. For something so
+                          hard, It
+                          feels pretty soft! " </blockquote>
+                        <small class="text-secondary card-text">Last
+                          updated 3 mins ago</small>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item ">
+              <div class="d-flex justify-content-center align-items-center">
+                <!--Carousel 1-->
+                <div class="card mb-3" style="max-width: 540px; background-color: #E9D4CA;">
+                  <div class="row no-gutters">
+                    <div class="col-md-4 text-center my-auto pt-5">
+                      <img src="images/Serious_women_1.png" class="rounded-circle" alt="">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Card Title</h5>
+                        <p class="">
+                        <blockquote>" I love the smooth quality that the rock was carved in. For something so
+                          hard, It
+                          feels pretty soft! " </blockquote>
+                        </p>
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
+          <a class="carousel-control-prev" type="button" data-target="#Slides" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" type="button" data-target="#Slides" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+
         </div>
       </div>
+    </div>
   </section>
   <!--Multiple Item Carousel-->
   <section>
   </section>
   <!--Drop Down Menu(Rock Knowledge)-->
   <section>
-    <h1>JDJDJJD</h1>
-    <div style="height:300px" class="text-center">
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="drop-it" data-toggle="dropdown"
-          aria-expanded="false">
-          Dropdown link
-        </button>
+    <div class="" style="background-color: #81482C;">
+      <div class="rounded" style="background-color: #E9D4CA;">
+        <h1 class="display-4 text-center">Rock Knowledge</h1>
+        <p class="text-center mb-0">Welcome to the Learning Area. On this part of the website we have some beginner rock
+          facts
+          with links in the case
+          that your curious. </p>
+      </div>
+      <div class="accordion" id="RockCollapse" style="background-color: #81482C; height: 600px;">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h2 class="mb-0">
+              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#make" aria-expanded="true"
+                aria-controls="collapseOne">
+                Ingenous Rocks
+              </button>
+            </h2>
+          </div>
 
-        <ul class="dropdown-menu" aria-labelledby="drop-it">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Action</a></li>
-        </ul>
+          <div id="make" class="collapse show" aria-labelledby="headingOne" data-parent="#RockCollapse">
+            <div class="card-body">
+              <p>Ingenous rocks are "Fire-Born", isn't that kinda cool?. Means they are formed from the cooling and
+                solidification of molten(melted) rock. The word "igneous" derives from ignis, the latin word for fire.
+                Molten
+                rock material is known as magma until it is erupted onto the surface when it then is termed lava. </p>
+              <p>There are two broad types of igneous rocks:
+              <ul>
+                <li>Intrusive (plutonic) rocks</li>
+                <li>Extrusive (volcanic) rocks</li>
+              </ul>
+              </p>
+              <p><b>Intrusive igneous</b> rocks solidify within Earth. These rocks are also known as plutonic
+                rocks—named for
+                Pluto,
+                the Roman god of the underworld. Intrusive igneous rocks are generally wholly crystalline and
+                characterized by
+                large crystal sizes visible to the naked eye because they cool slowly.</p>
+              <p><b>Extrusive igneous rocks</b>re erupted onto the surface or into the atmosphere. Extrusive igneous
+                rocks are
+                also termed volcanic rocks—named for Vulcan, the Roman god of fire. Volcanic rocks have generally
+                smaller
+                crystal size and usually have a very-fine-grained or glassy groundmass that formed due to rapid
+                cooling
+                at the
+                time of eruption.
+
+                Volcanic rocks are erupted as lava flows or lava domes during nonexplosive (effusive) eruptions or as
+                shattered
+                bits of rock (volcanic ash, tephra, and volcanic bombs which are collectively called pyroclasts)
+                during
+                explosive eruptions. Pyroclastic rocks are made of volcanic ash and other pieces of pulverized
+                volcanic
+                rock.
+                The term pyroclastic means “fire-broken” from “pryo-” (fire) and “-clastic” (broken) in Greek.
+                Pyroclastic rocks
+                include ash-fall and tephra-fall deposits as well as ash-flow tuffs (ignimbrites) that form from
+                pyroclastic
+                density currents.</p>
+            </div>
+            <div class="dropdown">
+              <a href="#" class="btn btn-secondary btn-lg dropdown-toggle" role="button" id="Ingenous"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ingenous</a>
+              <div class="dropdown-menu dropdown-menu-right " aria-labelledby="dropdownMenu">
+                <a href="https://www.nps.gov/subjects/geology/igneous.htm#:~:text=by%20Eva%20DiDonato.-,Introduction,of%20molten%20(melted)%20rock."
+                  class="dropdown-item" data-target="#Ingenous"> Igneous Rocks: Formed from the cooling and
+                  solidification of molten rock (magma or lava). Examples include granite and basalt.</a>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" id="headingTwo">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#Sedimentary"
+                  aria-expanded="false" aria-controls="collapseTwo">
+                  Sedimentary Rocks
+                </button>
+              </h2>
+            </div>
+            <div id="Sedimentary" class="collapse" aria-labelledby="headingTwo" data-parent="#RockCollapse">
+              <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
+                wolf
+                moon
+                officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
+                Brunch
+                3
+                wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
+                et.
+                Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad
+                vegan
+                excepteur butcher vice lomo. Leggings occaecat craft beer
+              </div>
+              <div class="dropdown">
+                <a href="#" class="btn btn-secondary btn-lg dropdown-toggle" role="button" id="Ingenous"
+                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sedimentary</a>
+                <div class="dropdown-menu dropdown-menu-right " aria-labelledby="dropdownMenu">
+                  <a href="https://www.nps.gov/subjects/geology/sedimentary.htm#:~:text=NPS%20photo.-,Introduction,accumulate%20on%20the%20Earth's%20surface."
+                    class=" dropdown-item" data-target="#Ingenous"> Sedimentary Rocks: Formed from the accumulation of
+                    sediments, such as sand,
+                    mud, and organic matter, which are compacted and cemented together over time</a>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingThree">
+                <h2 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#Metamorphic"
+                    aria-expanded="false" aria-controls="collapseThree">
+                    Metamorphic Rocks
+                  </button>
+                </h2>
+              </div>
+              <div id="Metamorphic" class="collapse" aria-labelledby="headingThree" data-parent="#RockCollapse">
+                <div class="card-body">
+                </div>
+                <div class="dropdown">
+                  <a href="#" class="btn btn-secondary btn-lg dropdown-toggle" role="button" id="Ingenous"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Metamorphic</a>
+                  <div class="dropdown-menu dropdown-menu-right " aria-labelledby="dropdownMenu">
+                    <a href="https://www.nps.gov/subjects/geology/metamorphic.htm" class="dropdown-item"
+                      data-target="#Ingenous"> Metamorphic Rocks: Formed from existing rocks that are
+                      subjected to heat, pressure, or chemical processes, causing them to change in form and
+                      structure.</a>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    </div>
+  </section>
+  <section>
+
   </section>
   <!--Sections with Aside(Our Most Esteemed Rock)-->
   <section>
@@ -209,14 +329,14 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet">
 
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
