Hehehe i have my own latin placeholder text

--- a/index.html
+++ b/index.html
@@ -285,6 +285,18 @@
               </div>
               <div id="Metamorphic" class="collapse" aria-labelledby="headingThree" data-parent="#RockCollapse">
                 <div class="card-body">
+                  Saepe in natura, lapides variis formis et coloribus inveniuntur, qui tam in terra quam in montibus,
+                  fluminibus et oceanis abundant. Hi materiae durissimae sunt, et eorum structura, compositione atque
+                  proprietatibus multum diversificantur. Exempli gratia, lapides ignei, sicut granitium et basaltus, ex
+                  liquido magma orta sunt, dum lapides sedimentarii, ut lutum et calcis, ex particulis in agua vel aere
+                  delubris depositis formantur. Alia vero genera, sicut schistus et gneiss, ex metamorphosi lapidum
+                  praeexistentium evolvuntur, ubi calor et pressio profunda eos ad novam structuram transformant.
+                  Lapides non solum pulchritudinem naturae ostendunt, sed etiam in variis culturis usus magni momenti
+                  sunt, ad aedificationem, ornamentum, et etiam medicinae. Fossilia et mineralia, quae in iis inclusa
+                  sunt, praebent multa indicia de historia geologica terrae, et per studium eorum, homines multa de
+                  evolutione planeti nostri ac de temporibus praeteritis cognoscere possunt. Eorum longissima vita et
+                  resistentia erosionis eos inter materiam durissimam et stabilem faciunt, quae tam in contextu
+                  geologico quam in usibus quotidianis hominum praeclaram locum tenet.
                 </div>
                 <div class="dropdown">
                   <a href="#" class="btn btn-secondary btn-lg dropdown-toggle" role="button" id="Ingenous"
