The rocks to big lets see if that fixes it

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       <p class="text-center text-white">Welcome to your favorite part of our website. You will no witness our...</p>
       <h1 class="text-center text-white">Most Esteemed Rock</h1>
       <h1 class="text-center text-white display-3">THE ROCK!!!</h1>
-      <div class="text-center"><img class="rounded-circle" src="images/THEE_ROOCK.png" alt=""></div>
+      <div class="text-center"><img class="rounded-circle img-fluid" src="images/THEE_ROOCK.png" alt=""></div>
       <div class="py-5 px-5 rounded" style="background-color: #E9D4CA;">
         <p>Dwayne "The Rock" Johnson's tenure in WWE stands as one of the most electrifying and transformative periods
           in
