--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Rock And Roll</title>
   <link rel="icon" href="" type="images/x-icon">
   <meta charset="utf-8">
-  <meta name="description" content="Rocks- we got rocks for ya">
+  <meta name="description" content="Rocks that'll knock off your SOCKS!!">
   <meta name="keywords" content="Rocks, Sedimentary, Igneous, Metamorphic, Boulders, Stones, Earth, Geology, Shop">
   <meta name="author" content="Isaac Edwards" name="author">
   <meta name="viewport" content="width=device-width, inital-scale=1.0">
