--- a/index.html
+++ b/index.html
@@ -166,6 +166,69 @@
   </section>
   <!--Multiple Item Carousel-->
   <section class="RockShop">
+    <div class="" style="background-color:#E9D4CA;">
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active border text-center">
+            <img src="images/Granite/Freakin_Granite.jpeg" class="img-fluid  px-5 " alt="...">
+            <img src="images/Granite/Dude_AI_is_Insane.jpeg" class="img-fluid px-5 d-none d-md-inline rounded" alt="">
+            <img src="images/Granite/Granite_1.jpeg" class="img-fluid img-fluid px-5 d-none d-xl-inline rounded" alt="">
+            <img src="images/Granite/Granite_2.jpeg" class="img-fluid img-fluid px-5 d-none d-xl-inline" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Granite</h5>
+              <p>75$ per Sq Ft</p>
+            </div>
+
+
+          </div>
+          <div class="carousel-item text-center">
+            <img src="images/LimeStone/LimeStone_1.jpeg" class="img-fluid px-5  " alt="...">
+            <img src="images/LimeStone/LimeStone_2.jpeg" class="img-fluid px-5  d-none d-md-inline" alt="">
+            <img src="images/LimeStone/LimeStone_3.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
+            <img src="images/LimeStone/LimeStone_Excavation.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>LimeStone</h5>
+              <p>250$ per Sq Ft</p>
+            </div>
+
+          </div>
+          <div class="carousel-item text-center">
+            <img src="images/Marble/AMarble_dang.jpeg" class="img-fluid px-5 " alt="...">
+            <img src="images/Marble/Marble.jpeg " class="img-fluid px-5  d-none d-md-inline" alt="">
+            <img src="images/Marble/Marble_2.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
+            <img src="images/Marble/Marble_excavation.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Marble</h5>
+              <p>500$ per sq ft</p>
+            </div>
+
+          </div>
+          <div class="carousel-item text-center">
+            <img src="images/Stromatolite/Sculpture_Stromatolie.jpeg" class="img-fluid px-5 " alt="...">
+            <img src="images/Stromatolite/Fire_stromatolie.jpeg" class="img-fluid px-5  d-none d-md-inline" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Stromatolite</h5>
+              <p>Price determined after consultation</p>
+            </div>
+
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
   </section>
   <!--Drop Down Menu(Rock Knowledge)-->
   <section id="RockKnowledge">
@@ -411,17 +474,25 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet">
 
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
+  <script src="index.js"></script>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
 </body>
 
 </html>
