Ok i thik this is a good stoppping point

--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@
             <img src="images/Granite/Granite_1.jpeg" class="img-fluid img-fluid px-5 d-none d-xl-inline rounded" alt="">
             <img src="images/Granite/Granite_2.jpeg" class="img-fluid img-fluid px-5 d-none d-xl-inline" alt="">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Granite</h5>
+              <h3>Granite</h3>
               <p>75$ per Sq Ft</p>
+              <p>Custom Cuts: Price determined after consultation</p>
             </div>
 
 
@@ -193,8 +194,9 @@
             <img src="images/LimeStone/LimeStone_3.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
             <img src="images/LimeStone/LimeStone_Excavation.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
             <div class="carousel-caption d-none d-md-block">
-              <h5>LimeStone</h5>
+              <h3>LimeStone</h3>
               <p>250$ per Sq Ft</p>
+              <p>Custom Cuts: Price determined after consultation</p>
             </div>
 
           </div>
@@ -204,8 +206,10 @@
             <img src="images/Marble/Marble_2.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
             <img src="images/Marble/Marble_excavation.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Marble</h5>
-              <p>500$ per sq ft</p>
+              <h3>Marble</h3>
+              <p>500$ per sq ft
+              </p>
+              <p>Custom Cuts: Price determined after consultation</p>
             </div>
 
           </div>
@@ -213,7 +217,7 @@
             <img src="images/Stromatolite/Sculpture_Stromatolie.jpeg" class="img-fluid px-5 " alt="...">
             <img src="images/Stromatolite/Fire_stromatolie.jpeg" class="img-fluid px-5  d-none d-md-inline" alt="">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Stromatolite</h5>
+              <h3>Stromatolite</h3>
               <p>Price determined after consultation</p>
             </div>
 
