Whered i want text to stay there forever on the multpile slides

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <img src="images/Granite/Dude_AI_is_Insane.jpeg" class="img-fluid px-5 d-none d-md-inline rounded" alt="">
             <img src="images/Granite/Granite_1.jpeg" class="img-fluid img-fluid px-5 d-none d-xl-inline rounded" alt="">
             <img src="images/Granite/Granite_2.jpeg" class="img-fluid img-fluid px-5 d-none d-xl-inline" alt="">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption ">
               <h3>Granite</h3>
               <p>75$ per Sq Ft</p>
               <p>Custom Cuts: Price determined after consultation</p>
@@ -193,7 +193,7 @@
             <img src="images/LimeStone/LimeStone_2.jpeg" class="img-fluid px-5  d-none d-md-inline" alt="">
             <img src="images/LimeStone/LimeStone_3.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
             <img src="images/LimeStone/LimeStone_Excavation.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption ">
               <h3>LimeStone</h3>
               <p>250$ per Sq Ft</p>
               <p>Custom Cuts: Price determined after consultation</p>
@@ -205,7 +205,7 @@
             <img src="images/Marble/Marble.jpeg " class="img-fluid px-5  d-none d-md-inline" alt="">
             <img src="images/Marble/Marble_2.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
             <img src="images/Marble/Marble_excavation.jpeg" class="img-fluid px-5  d-none d-xl-inline" alt="">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
               <h3>Marble</h3>
               <p>500$ per sq ft
               </p>
@@ -216,7 +216,7 @@
           <div class="carousel-item text-center">
             <img src="images/Stromatolite/Sculpture_Stromatolie.jpeg" class="img-fluid px-5 " alt="...">
             <img src="images/Stromatolite/Fire_stromatolie.jpeg" class="img-fluid px-5  d-none d-md-inline" alt="">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption ">
               <h3>Stromatolite</h3>
               <p>Price determined after consultation</p>
             </div>
